feat: formatrice en chiffres + graphes

--- a/ABM.Paie/Pages/Experience.razor
+++ b/ABM.Paie/Pages/Experience.razor
@@ -126,7 +126,162 @@
                 </MudText>
             </TitleContent>
             <ChildContent>
-                <div class="d-flex flex-column" style="margin-top:20px;">
+                <div class="d-flex flex-column" style="margin-top:20px;padding:20px 10px;">
+                    <MudText style="margin:20px 0;" Class="indigo-text" Typo="Typo.h6">3300+ heures de formation en 430+ formations.</MudText>
+
+					<MudText>
+						L'un de mes objectifs est de réussir à reformaliser toutes ces formations acquises dans mon champ de compétence 
+                        selon la norme Qualiopi pour mon enrichir mon catalogue 
+                        mais également de créer de nouvelles thématiques.
+                    </MudText>
+
+					<MudText Style="margin:20px 0;"><b>Quelques graphiques de mon métier de formatrice chez Silae</b></MudText>
+
+                    <MudText style="margin:20px 0;" Class="indigo-text" Typo="Typo.h6">La formation <i>Initiale</i></MudText>
+
+                    <MudText>2200+ heures de formation initiale</MudText>
+                    <img width="450" style="margin:20px 0;" src="/images/graphs/InitialeVsPerfectionnement.png" alt="Initiale vs Perfectionnement" />
+
+                    <MudText>82% en présentiel et 18% en distanciel</MudText>
+                    <img width="450" style="margin:20px 0;" src="/images/graphs/Initiale_PresentielVsDistanciel.png" alt="Initiale : Présentiel vs Distanciel" />
+
+					<MudText>Mes déplacements selon les régions de France métropolitaine</MudText>
+                    <img width="450" style="margin:20px 0;" src="/images/graphs/Region.png" alt="Déplacements selon les régions" />
+
+					<MudText>Mes déplacements selon les départements de France métropolitaine</MudText>
+                    <img width="450" style="margin:20px 0;" src="/images/graphs/Departement.png" alt="Déplacements selon les départements" />
+
+                    <MudText style="margin:20px 0;" Class="indigo-text" Typo="Typo.h6">En présentiel</MudText>
+
+					<MudText>84% en Intra et 16% en Inter</MudText>
+                    <img width="450" style="margin:20px 0;" src="/images/graphs/Initiale_IntraVsInter.png" alt="Initiale : Intra vs Inter" />
+
+                    <MudText style="margin:20px 0;" Class="indigo-text" Typo="Typo.h6">En inter</MudText>
+
+                    <MudText>41% à Aix-en-Provence</MudText>
+                    <MudText>24% à Toulouse</MudText>
+                    <MudText>18% à Paris</MudText>
+                    <MudText>12% à Lille</MudText>
+                    <MudText>6% à Bordeaux</MudText>
+
+                    <MudText style="margin:20px 0;" Class="indigo-text" Typo="Typo.h6">La formation <i>Perfectionnement</i></MudText>
+
+                    <MudText>66% à la carte et 34% par thématique définie</MudText>
+                    <img width="450" style="margin:20px 0;" src="/images/graphs/Perfectionnement_CarteVsThematique.png" alt="Perfectionnement : À la carte vs Thématique définie" />
+
+                    <MudText>
+                        La formation perfectionnement à la carte pouvait aller de la théorie de thèmes choisis au consulting.
+                        <br />
+                        Le consulting prenait souvent la forme d’une liste de questions des apprenants 
+                        pour lesquelles je devais faire ressortir un fil conducteur tout au long de la journée 
+                        afin de transmettre un savoir cohérent, fluide et progressif 
+                        pour que les apprenants trouvent d’eux-mêmes la solution aux différentes questions.
+                    </MudText>
+
+                    <MudText>Différentes thématiques dispensées, par heures de formation</MudText>
+                    <img width="450" style="margin:20px 0;" src="/images/graphs/PerfectionnementDistancielThematique.png" alt="Perfectionnement : Distanciel selon les thématiques" />
+
+                    <MudText>
+                        <b>Formation DOM :</b>
+                        <br />
+                        Formation libre où l’apprenant apprenait selon ses besoins spécifiques.
+                        La formation pouvait se faire sur des dossiers modèles adaptés aux spécificités ultramarines.
+                    </MudText>
+                    <MudText>
+                        <b>Formation DSN :</b>
+                        <br />
+                        Selon les besoins, la formation DSN pouvait prendre plusieurs formes :
+                        <br />
+                        Révisions des cotisations et des organismes 
+                        pour faire un approfondissement complet de la maitrise du paramétrage des FPOC 
+                        (feuilles de paramétrages des Organismes Complémentaires)
+                        <br />
+                        Qu’est-ce que la DSN (Déclaration Sociale Nominative)
+                        <br />
+                        Comprendre le cahier technique de la norme NéODES
+                        <br />
+                        Les différents points de paramétrage dans le logiciel de paie pour une DSN juste.
+                        <br />
+                        Les différentes régularisations et surtout les paramétrages en amont pour éviter les régularisations.
+                    </MudText>
+                    <MudText>
+                        <b>Formation RC :</b>
+                        <br />
+                        La formation relation client, ainsi appelée avant l'apparition de MySilae, 
+                        était une formation sur les paramétrages à réaliser pour permettre à vos clients 
+                        d’interagir avec vous sur tout ou partie des données de la paie directement dans l’interface.
+                    </MudText>
+                    <MudText>
+                        <b>Formation EC :</b>
+                        <br />
+                        La formation écriture comptable, permettait d’apprendre 
+                        comment paramétrer ses OD (opérations diverses) 
+                        de paie dans le logiciel avec pour finalité l’export 
+                        du fichier séquentiel à destination de votre logiciel de comptabilité.
+                    </MudText>
+                    <MudText>
+                        <b>Formation ABH :</b>
+                        <br />
+                        La formation Absences en heures mensualisées permettait 
+                        d’appréhender toutes les méthodes proposées par le logiciel de paie 
+                        pour calculer vos absences sur des salariés exclusivement 
+                        en heures mensualisées. 
+                        Cette formation donne l’importance de comprendre le mécanisme réalisé 
+                        par une méthode ou une autre, pour mieux comprendre du 
+                        à la mensualisation les résultats parfois surprenant 
+                        sur un bulletin de paie.
+                    </MudText>
+                    <MudText>
+                        <b>Formation ADMIN :</b>
+                        <br />
+                        Cette formation n’a plus lieu d’être aujourd’hui. En effet, 
+                        l’interface a été rendue accessible et simplifiée 
+                        pour un usage ouvert à tous les responsables du domaine 
+                        dans le logiciel de paie. 
+                        L'explication des paramétrages d’administration du logiciel de paie 
+                        est aujourd’hui directement expliquée dans mes vidéos de démarrage.
+                    </MudText>
+                    <MudText>
+                        <b>Formation Libellé Profil :</b>
+                        <br /> 
+                        La formation Libellé Profil est exclusivement concentrée sur les primes. 
+                        Il s’agit de comprendre la différence entre un libellé de prime et 
+                        un profil de prime. 
+                        Dans cette formation, il est montré 
+                        toutes les possibilités de primes faisables via 
+                        l’outil de simplification : 
+                        Paramétrage &lt; Primes &lt; Primes ou Paramétrage &lt; Primes &lt; Profils Utilisateurs.
+                        <br />
+                        Les formations relatives au langage propre à MySilae : 
+                        le Scriptae ou Paramétrages avancées. CC, CP1, CP2, CP3.
+                        <br />
+                        J’ai été parmi les actrices de la refonte de la formation Paramétrages 
+                        avancés qui avait été réalisée par les salariés du service anciennement montage.
+                        <br />
+                        J’ai ainsi été à l’origine d’un module de 2h de formation 
+                        sur le scriptae en rapport avec les cotisations et 
+                        trois modules de formations de 2h sur les primes :  
+                        les bases, l’apprentissage des dates via les primes plus poussées, 
+                        les PCCN01 et le cas particuliers du libellé de prime D01 
+                        (prime d’ancienneté).  
+                        <br />
+                        En suivant mes paires au sein du service formation, 
+                        j’ai la connaissance des deux autres formations incluses 
+                        dans le parcours de formation PAAV : 
+                        import de variable et optimisation.
+                    </MudText>
+                    <MudText>
+                        <b>Formation EH :</b>
+                        <br />
+                        La formation édition historique est une formation sur un langage spécifique du scriptae, 
+                        qui permet d’extraire des tableaux de données des données salariés, société ou du bulletin.
+                    </MudText>
+
+                    <MudText style="margin:20px 0;" Class="indigo-text" Typo="Typo.h6">Formation <i>Perfectionnement</i> à la carte</MudText>
+
+                    <MudText>73% en présentiel et 27% en distanciel</MudText>
+                    <img width="450" style="margin:20px 0;" src="/images/graphs/Perfectionnement_PresentielVsDistanciel.png" alt="Perfectionnement : Présentiel vs Distanciel" />
+
                 </div>
             </ChildContent>
         </MudExpansionPanel>
@@ -143,7 +298,7 @@
                         j’apprends les techniques de réalisation d’un projet <span style="white-space:nowrap;">de A à Z.</span>
                     </MudText>
                     <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text"
-                               Href="/resources/ABMq_Fiche_Projet_CAFEL.pdf"
+                               Href="/resources/Plaquette_CAFEL_2024-2025.pdf" Target="_blank" 
                                EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="margin:10px 0 10px 0;text-transform:none;width:fit-content;">
                         visualiser le programme de formation CAFEL
                     </MudButton>
@@ -153,9 +308,9 @@
                         comme Kumullus ou Storyline.
                     </MudText>
                     <MudButton Class="indigo-text text-lighten-2" Variant="Variant.Text"
-                               Href="/resources/Plaquette_CAFEL_2024-2025.pdf"
+                               Href="/resources/ABMq_Fiche_Projet_CAFEL.pdf" Target="_blank" 
                                EndIcon="@Icons.Material.TwoTone.ArrowCircleRight" Style="margin:10px 0 10px 0;text-transform:none;width:fit-content;">
-                        visualiser le programme de formation CAFEL
+                        décrouvrir mon projet de formation dont la soutenance aura lieu fin juin 2025
                     </MudButton>
                 </div>
             </ChildContent>
